# kyouth-data-ai-khongbk

./: .gitignore  README.md  pyproject.toml
week_1/: main.py  pyproject.toml
week_1/queries/: average_description_length_jobs.sql  average_description_length_quarantine.sql  count_missing_values.sql  count_missing_values_jobs.sql  count_missing_values_quarantine.sql  count_quarantine_records.sql  count_total_jobs.sql  create_jobs_quarantine_table.sql  create_jobs_table.sql  delete_low_quality_jobs.sql  insert_job.sql  insert_job_record.sql  label_jobs_quality.sql  longest_description.sql  longest_description_job.sql  move_low_quality_to_quarantine.sql  shortest_description.sql  shortest_description_job.sql  update_job_quality.sql
week_1/src/: ingestor.py  loader.py  processor.py  profiler.py  sql.py  utils.py
week_2/: .env example  README.md  find_skill_gaps.py  prompt_model.py  pyproject.toml  rate_limits.txt  tag_data.py
week_2/resources/: jobs_d1.db
week_2/resources_eval/: d3_truth.json  d3_wrong.json  jobs_d3_eval.db  resume_d3_eval.txt
week_3/: .gitignore  README.md  docker-compose.yml
week_3/backend/: Dockerfile  pyproject.toml
week_3/backend/src/: app.py
week_3/backend/src/utils/: chat_utils.py  find_skill_gaps.py  gemini_utils.py  ollama_utils.py  rate_limiter.py  rate_limits.txt
week_3/backend/src/week_2/: find_skill_gaps.py
week_3/frontend/: .dockerignore  Dockerfile  pyproject.toml
week_3/frontend/src/: app.py  jobs.db
week_3/frontend/src/templates/: chart.html  chat_page.html  dashboard.html
